EBookMetaBackend: Changes from refresh() not propagated to the opened views
Hello!
I use EBookClientView
's Object added
https://source.puri.sm/Librem5/chatty/-/blob/master/src/chatty-contact-provider.c#L350 to watch for additions to an address book. This does fine for local CardDav changes (e.g., I add one through GNOME Contacts). However, I added a contact on a different computer to the same CardDav address book. When e-d-s synced and added that contact, I noticed it did not emit a, Object added
signal.
I think this signal should be emitted if there was a changed server side and e-d-s notices the change.