I#490 - EBookMetaBackend: Changes from refresh() not propagated to the opened views

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/490